12-kubernetes-05-cni/hello.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-node
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-node
  template:
    metadata:
      labels:
        app: hello-node
    spec:
      containers:
      - name: hello-node
        image: k8s.gcr.io/echoserver:1.4
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-node
  namespace: default
spec:
  selector:
    app: hello-node
  ports:
  - name: hello-node
    port: 8080
    targetPort: 8080
