12-kubernetes-05-cni/network-policy-allow-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-ingress-app
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello-node
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: multitool
    ports:
    - protocol: TCP
      port: 8080
